finished socket hello world

--- a/Homework4/loadBalancer/SockHelloWorld/Makefile
+++ b/Homework4/loadBalancer/SockHelloWorld/Makefile
@@ -1,12 +1,13 @@
 CXX=clang++
+FLAGS=-std=c++17
 
 all: echo_srv.out proxy_srv.out
 
 echo_srv.out: echo_srv.cpp
-	$(CXX) $^ -o $@
+	$(CXX) $(FLAGS) $^ -o $@
 
 proxy_srv.out: proxy_srv.cpp
-	$(CXX) $^ -o $@
+	$(CXX) $(FLAGS) $^ -o $@
 
 clean:
 	rm -f echo_srv.out proxy_srv.out
