added GreedyLBCore and dynamic LBCore from argv dispatch

--- a/Homework4/loadBalancer/makefile
+++ b/Homework4/loadBalancer/makefile
@@ -1,7 +1,7 @@
 CXX=clang++
 FLAGS=-Wall -Werror -std=c++17 -ferror-limit=1
 
-load_balancer.out: LBEngine/LBEngine.cpp LBCore/LBCore.hpp LBCore/RoundRobinLBCore.hpp Common/Fifo.hpp
+load_balancer.out: LBEngine/LBEngine.cpp LBCore/LBCore.hpp Common/Fifo.hpp
 	$(CXX) $(FLAGS) LBEngine/LBEngine.cpp -o $@
 
 clean:
