--- a/Homework4/loadBalancer/makefile
+++ b/Homework4/loadBalancer/makefile
@@ -1,5 +1,5 @@
-CXX=clang++
-FLAGS=-Wall -Werror -std=c++17 -ferror-limit=1
+CXX=g++
+FLAGS=-Wall -g -Werror -std=c++11 -Wno-sign-compare
 
 load_balancer.out: LBEngine/LBEngine.cpp LBCore/LBCore.hpp Common/Fifo.hpp
 	$(CXX) $(FLAGS) LBEngine/LBEngine.cpp -o $@
