--- a/Homework4/loadBalancer/makefile
+++ b/Homework4/loadBalancer/makefile
@@ -1,8 +1,11 @@
-CXX=g++
-FLAGS=-Wall -g -Werror -std=c++11 -Wno-sign-compare
+COMMON_FLAGS=-Wall -g -Werror -Wno-sign-compare
+GPP_FLAGS=$(COMMON_FLAGS) -std=c++11
+CLANG_FLAGS=$(COMMON_FLAGS) -std=c++17 -ferror-limit=1
+GPP=g++ $(GPP_FLAGS)
+CLANG=clang++ $(CLANG_FLAGS)
 
-load_balancer.out: LBEngine/LBEngine.cpp LBCore/LBCore.hpp Common/Fifo.hpp
-	$(CXX) $(FLAGS) LBEngine/LBEngine.cpp -o $@
+load_balancer: LBEngine/LBEngine.cpp LBCore/LBCore.hpp Common/Fifo.hpp
+	$(GPP) LBEngine/LBEngine.cpp -o $@
 
 clean:
-	rm -f load_balancer.out
+	rm -f load_balancer emulator
